--- a/Skills.html
+++ b/Skills.html
@@ -43,19 +43,19 @@
 		</div>
 		<div class="ski-text">
 			<h4>Language</h4>
-			<p>&ensp; Mandarin, Cantonese, English (IELTS: 6.5)</p>
+			<p>Mandarin, Cantonese, English (IELTS: 6.5)</p>
 			&ensp;
 			<h4>Statistical Software</h4>
-			<p>&ensp; R, STATA, SAS, SPSS, PLINK</p>
+			<p>R, STATA, SAS, SPSS, PLINK</p>
 			&ensp;
 			<h4>Office Skills</h4>
-			<p>&ensp; Second-level Certificate for National Computer (MS Office)</p>
+			<p>Second-level Certificate for National Computer (MS Office)</p>
 			&ensp;
 			<h4>Others</h4>
-			<p>&ensp; Driver′s License</p>
+			<p>Driver′s License</p>
 			&ensp;
 			<h4>Hobbies</h4>
-			<p>&ensp; Singing, Ukulele, Swimming, Gym</p>
+			<p>Singing, Ukulele, Swimming, Gym</p>
 			&ensp;
 		</div>
 	</body>
