--- a/Education.html
+++ b/Education.html
@@ -42,17 +42,20 @@
 			</li>
 		</div>
 		<div class="edu-text">
-			<h4>Sep 2021 —— Now &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;The University of Hong Kong</h4> 
+			<h4>The University of Hong Kong</h4> 
+			<p>Sep 2021 —— Now</p>
 			<p>Ph.D Candidate</p> 
 			<p>Clinical Epidemiology</p>
 			<p>Research interests: Large-scale cohort study, Clinical epidemiology, Genetic epidemiology</p>
 			&ensp;
-			<h4>Sep 2018 —— Jun 2021 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Tsinghua University – Peking Union Medical College</h4>
+			<h4>Tsinghua University – Peking Union Medical College</h4>
+			<p>Sep 2018 —— Jun 2021 </p>
 			<p>Master of Medicine</p> 
 			<p>Epidemiology and Health Statistics</p>
 			<p>Research interests: Epidemiology of chronic diseases, Birth cohort study, Evidence-based medicine, Meta-analysis</p>
 			&ensp;
-			<h4>Sep 2013 —— Jun 2018 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Southern Medical University</h4>
+			<h4>Southern Medical University </h4>
+			<p>Sep 2013 —— Jun 2018</p>
 			<p>Bachelor of Medicine</p> 
 			<p>Preventive Medicine</p>
 			<p>Major courses: Epidemiology, Hygienic Statistics, Social Medicine, Health Management</p>
