--- a/Research.html
+++ b/Research.html
@@ -42,31 +42,38 @@
 			</li>
 		</div>
 		<div class="edu-text">
-			<h4>Sep 2022 —— Now &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Chinese Electronic Health Records Research in Yinzhou</h4>
+			<h4>Chinese Electronic Health Records Research in Yinzhou</h4>
+			<p>Sep 2022 —— Now</p>
 			<p>Data Analyst</p> 
 			<p>Data cleaning, Data analysis, Data visualization, Write-up</p>
 			&ensp;
-			<h4>Sep 2022 —— Now &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Mendelian Randomization Study on Prostate Cancer</h4>
-			<p>Principal Investigator - Student</p> 
+			<h4>Mendelian Randomization Study on Prostate Cancer</h4>
+			<p>Sep 2022 —— Now </p>
+			<p>Investigator</p> 
 			<p>Study design, Data collection, Data collation, Data cleaning, Data analysis, Data visualization, Write-up</p>
 			&ensp;
-			<h4>Sep 2021 —— Now &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Suicide Thoughts and Behaviours among Adolescents in Low- and Middle-income Countries</h4>
+			<h4>Suicide Thoughts and Behaviours among Adolescents in Low- and Middle-income Countries</h4>
+			<p>Sep 2021 —— Now </p>
 			<p>Principal Investigator</p> 
 			<p>Study design, Data collection, Data collation, Data cleaning, Data analysis, Data visualization, Write-up</p>
 			&ensp;
-			<h4>Sep 2018 —— Jul 2021 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Chinese Pregnant Women Cohort Study - Peking Union Medical College</h4>
+			<h4>Chinese Pregnant Women Cohort Study - Peking Union Medical College</h4>
+			<p>Sep 2018 —— Jul 2021 </p>
 			<p>Project Manager</p> 
 			<p>Project co-ordination, Follow-up, Data management, Data analysis, Write-up</p>
 			&ensp;
-			<h4>Sep 2019 —— Jul 2021 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Research on Contemporary Public Health Discipline System Construction and Talent Cultivation Mode</h4>
+			<h4>Research on Contemporary Public Health Discipline System Construction and Talent Cultivation Mode</h4>
+			<p>Sep 2019 —— Jul 2021 </p>
 			<p>Research Assistant</p> 
 			<p>Literature review, Logistic work</p>
 			&ensp;
-			<h4>Jan 2019 —— Dec 2020 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Construction of a Data Harmonization and Sharing Method for Esophageal Cancer and Liver Cancer Cohort Study</h4>
+			<h4>Construction of a Data Harmonization and Sharing Method for Esophageal Cancer and Liver Cancer Cohort Study</h4>
+			<p>Jan 2019 —— Dec 2020 </p>
 			<p>Project Manager</p> 
 			<p>Study design, Literature review, Write-up</p>
 			&ensp;
-			<h4>Sep 2019 —— Aug 2020 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Integration of Dementia Monitoring and Hierarchical Management into Public Health Services: A Feasibility Study</h4>
+			<h4>Integration of Dementia Monitoring and Hierarchical Management into Public Health Services: A Feasibility Study</h4>
+			<p>Sep 2019 —— Aug 2020 </p>
 			<p>Research Assistant</p> 
 			<p>Literature review, Logistic work, Data analysis, Write-up</p>
 			&ensp;
